--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 asgiref==3.8.1
+async-timeout==5.0.1
 Django==5.1.3
+django-debug-toolbar==4.4.6
+django-redis==5.4.0
+pillow==11.0.0
+python-dotenv==1.0.1
+redis==5.2.0
 sqlparse==0.5.2
 typing_extensions==4.12.2
